@@ -1,16 +1,16 @@
 package com.dfsek.terra.bukkit.generator;
 
-import com.dfsek.terra.api.Handle;
-
-import com.dfsek.terra.api.world.biome.TerraBiome;
-
 import org.bukkit.block.Biome;
 import org.bukkit.generator.BiomeProvider;
 import org.bukkit.generator.WorldInfo;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
+import com.dfsek.terra.api.Handle;
+import com.dfsek.terra.api.world.biome.TerraBiome;
 
 
 public class BukkitBiomeProvider extends BiomeProvider implements Handle {
@@ -26,7 +26,12 @@ public class BukkitBiomeProvider extends BiomeProvider implements Handle {
     
     @Override
     public @NotNull List<Biome> getBiomes(@NotNull WorldInfo worldInfo) {
-        return Arrays.stream(Biome.values()).toList();
+        return StreamSupport.stream(delegate.getBiomes().spliterator(), false)
+                            .flatMap(terraBiome -> terraBiome.getVanillaBiomes()
+                                                             .getContents()
+                                                             .stream()
+                                                             .map(biome -> (Biome) biome.getHandle()))
+                            .collect(Collectors.toList());
     }
     
     @Override
